# bitnami-postgresql-wal2json

./: Dockerfile  README.md  manifest.json
.github/workflows/: ci.yml
updater/: main.py  pyproject.toml
